set up db and initial migrations

--- a/services/profile/Makefile
+++ b/services/profile/Makefile
@@ -1,4 +1,4 @@
-.PHONY: proto
+.PHONY: proto migration-up migration-down
 PROTOC_GEN_GO := $(GOPATH)/bin/protoc-gen-go
 
 $(PROTOC_GEN_GO):
@@ -9,3 +9,9 @@ profile.pb.go: pb/profile.proto | $(PROTOC_GEN_GO)
 	protoc --go_out=plugins=grpc:pb -I pb pb/profile.proto
 
 proto: profile.pb.go
+
+migration-up:
+	cd scripts/migrations && go run . 
+
+migration-down:
+	cd scripts/migrations && go run . down
