--- a/services/profile/configs/env.yaml
+++ b/services/profile/configs/env.yaml
@@ -5,10 +5,10 @@ server:
   port: 8080
 
 database:
-  address: localhost:5432
+  address: profile-db:5432
   username: postgres
   password: admin
-  database: postgres
+  database: profile
   sslmode: disable
   drivername: postgres
 
