--- a/services/profile/Makefile
+++ b/services/profile/Makefile
@@ -5,8 +5,8 @@ $(PROTOC_GEN_GO):
 	go get -u github.com/golang/protobuf/protoc-gen-go
 	go get -u google.golang.org/grpc/cmd/protoc-gen-go-grpc
 
-profile.pb.go: pb/profile.proto | $(PROTOC_GEN_GO)
-	protoc --go_out=plugins=grpc:pb -I pb pb/profile.proto
+profile.pb.go: models/pb/profile.proto | $(PROTOC_GEN_GO)
+	protoc --go_out=plugins=grpc:. -I models/pb models/pb/profile.proto
 
 proto: profile.pb.go
 
