--- a/services/profile/Dockerfile
+++ b/services/profile/Dockerfile
@@ -1,20 +1,20 @@
 FROM golang:1.15-alpine as builder
 LABEL stage=builder
 RUN apk add --no-cache ca-certificates git build-base
-WORKDIR /build
+WORKDIR /go/src/in-backend/
 
 # restore dependencies
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . .
-RUN cd cmd && \
+COPY ./services/profile/ ./services/profile/
+RUN cd services/profile/cmd && \
     CGO_ENABLED=1 && \
     GOOS=linux && \
     GOARCH=amd64 && \
     go build -o /build/dist/main
 
-RUN cd scripts/migrations && \
+RUN cd services/profile/scripts/migrations && \
     CGO_ENABLED=1 && \
     GOOS=linux && \
     GOARCH=amd64 && \
@@ -24,6 +24,8 @@ FROM alpine as release
 RUN apk add --no-cache ca-certificates
 WORKDIR /app
 COPY --from=builder /build/dist/ .
-COPY --from=builder /build/configs/config.env .
+COPY --from=builder /go/src/in-backend/services/profile/configs/config.env .
+COPY --from=builder /go/src/in-backend/services/profile/scripts/migrations/*.sql ./
 RUN chmod +x ./main
+EXPOSE 50051
 ENTRYPOINT ["./main"]
