add api gateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,16 @@ version: "3"
 
 services:
   profile-service:
-    build: ./services/profile
+    build: 
+      context: .
+      dockerfile: ./services/profile/Dockerfile
     image: profile-service
     container_name: profile-service
     restart: always
     depends_on:
       - profile-db
     ports:
-      - 8080:8080
+      - ${PROFILE_SERVICE_PORT}:${PROFILE_SERVICE_PORT}
     networks:
       - backend
   profile-db:
@@ -24,9 +26,20 @@ services:
         timeout: 5s
         retries: 5
     ports:
-      - 5432:5432
+      - ${DATABASE_PORT}:${DATABASE_PORT}
     volumes:
       - db-data:/var/lib/postgresql/data
+    networks:
+      - backend
+  gateway:
+    build: 
+      context: .
+      dockerfile: ./gateway/Dockerfile
+    image: gateway
+    container_name: gateway
+    restart: always
+    ports:
+      - ${GATEWAY_PORT}:${GATEWAY_PORT}
     networks:
       - backend
 
