--- a/services/profile/Makefile
+++ b/services/profile/Makefile
@@ -1,12 +1,16 @@
-.PHONY: proto migration-up migration-down
+.PHONY: proto migration-up migration-down mocks
 PROTOC_GEN_GO := $(GOPATH)/bin/protoc-gen-go
 
 $(PROTOC_GEN_GO):
 	go get -u github.com/golang/protobuf/protoc-gen-go
 	go get -u google.golang.org/grpc/cmd/protoc-gen-go-grpc
+	go get -u github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2
+	go get -u github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway
 
 profile.pb.go: pb/profile.proto | $(PROTOC_GEN_GO)
-	protoc --go_out=plugins=grpc:pb/. -I pb pb/profile.proto
+	protoc -I pb -I $(GOPATH)/src/ --go_out plugins=grpc:../../ pb/profile.proto
+	protoc -I pb -I $(GOPATH)/src/ --grpc-gateway_out ../../ --grpc-gateway_opt logtostderr=true pb/profile.proto
+	protoc -I pb -I $(GOPATH)/src/ --openapiv2_out ../../ --openapiv2_opt logtostderr=true pb/profile.proto
 
 proto: profile.pb.go
 
