--- a/services/profile/Makefile
+++ b/services/profile/Makefile
@@ -1,4 +1,4 @@
-.PHONY: proto migration-up migration-down mocks
+.PHONY: proto migration-up migration-down mocks reset
 PROTOC_GEN_GO := $(GOPATH)/bin/protoc-gen-go
 
 $(PROTOC_GEN_GO):
@@ -22,3 +22,8 @@ migration-down:
 
 mocks:
 	mockery --all && mv mocks tests/
+
+reset:
+	cd ../.. && docker-compose down -v
+	cd ../.. && docker-compose build
+	cd ../.. && docker-compose up -d
