set ulimits for elasticsearch to work on windows

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,10 @@ services:
             - sonarqube-temp:/opt/sonarqube/temp
         networks: 
             - backend
+        ulimits:
+            nofile:
+                soft: "65536"
+                hard: "65536"
   
 
 networks:
