change restart policy for sonarqube to unless stopped

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,7 +76,7 @@ services:
     sonarqube:
         image: sonarqube:community
         container_name: sonarqube
-        restart: always
+        restart: unless-stopped
         environment:
             SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
             SONAR_JDBC_USERNAME: ${POSTGRES_USER}
