--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,7 @@ services:
         networks: 
             - backend
             - frontend
-    sonarqube:
+    sonarqube-sonarqube-svc:
         image: sonarqube:community
         container_name: sonarqube
         restart: unless-stopped
