--- a/deployments/sonarqube-deployment.yaml
+++ b/deployments/sonarqube-deployment.yaml
@@ -23,22 +23,26 @@ spec:
     spec:
       containers:
         - env:
-            - name: SONAR_JDBC_PASSWORD
-              valueFrom: 
-                secretKeyRef:
-                  name: db-secret
-                  key: password
-            - name: SONAR_JDBC_URL
-              valueFrom: 
-                secretKeyRef:
-                  name: db-secret
-                  key: jdbc_url
-            - name: SONAR_JDBC_USERNAME
-              valueFrom: 
-                secretKeyRef:
-                  name: db-secret
-                  key: username
+          - name: SONAR_JDBC_PASSWORD
+            valueFrom: 
+              secretKeyRef:
+                name: db-secret
+                key: password
+          - name: SONAR_JDBC_URL
+            valueFrom: 
+              secretKeyRef:
+                name: db-secret
+                key: jdbc_url
+          - name: SONAR_JDBC_USERNAME
+            valueFrom: 
+              secretKeyRef:
+                name: db-secret
+                key: username
           image: sonarqube:community
+          lifecycle: 
+            postStart:
+              exec:
+                command: ["/bin/sh", "-c", "sysctl -w vm.max_map_count=262144; sysctl -w fs.file-max=65536; ulimit -n 65536; ulimit -u 4096"]
           name: sonarqube
           ports:
             - containerPort: 9000
