--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -9,6 +9,7 @@ RUN go mod download
 COPY ./gateway/ ./gateway/
 COPY ./services/profile/pb ./services/profile/pb
 COPY ./services/project/pb ./services/project/pb
+COPY ./services/assessment/pb ./services/assessment/pb
 RUN cd gateway/cmd && \
     CGO_ENABLED=1 && \
     GOOS=linux && \
