add scheduler and method to end assessment attempt on expiry

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,7 +97,7 @@ services:
     scheduler-worker:
         build: 
             context: .
-            dockerfile: ./scheduler/Dockerfile
+            dockerfile: ./scheduler/worker/Dockerfile
         image: scheduler-worker
         container_name: scheduler-worker
         restart: always
