--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -7,6 +7,7 @@ COPY go.mod go.sum ./
 RUN go mod download
 
 COPY ./gateway/ ./gateway/
+COPY ./helpers/ ./helpers/
 COPY ./services/profile/pb ./services/profile/pb
 COPY ./services/project/pb ./services/project/pb
 COPY ./services/assessment/pb ./services/assessment/pb
